--- a/Back/package.json
+++ b/Back/package.json
@@ -1,5 +1,26 @@
 {
   "dependencies": {
-    "node": "^20.3.1"
-  }
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "mercadopago": "^1.5.16",
+    "morgan": "^1.10.0",
+    "node": "^20.3.1",
+    "nodemon": "^2.0.22",
+    "pg-hstore": "^2.3.4",
+    "postgresql": "^0.0.1"
+  },
+  "name": "back",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {
+    "express": "^4.18.2",
+    "prisma": "^4.16.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
