--- a/Back/package.json
+++ b/Back/package.json
@@ -1,23 +1,23 @@
 {
   "dependencies": {
-    "babel": "^6.23.0",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mercadopago": "^1.5.16",
     "morgan": "^1.10.0",
-    "node": "^20.3.1",
-    "nodemon": "^2.0.22",
-    "pg-hstore": "^2.3.4",
-    "postgresql": "^0.0.1"
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4"
   },
   "name": "back",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "/Back/index.js",
   "devDependencies": {
-    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "prisma": "^4.16.2"
   },
   "scripts": {
+    "start": "nodemon -L",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
