--- a/Back/package.json
+++ b/Back/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@prisma/client": "^4.16.2",
     "axios": "^1.4.0",
+    "cloudinary": "^1.37.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
