--- a/Back/package.json
+++ b/Back/package.json
@@ -2,12 +2,13 @@
   "dependencies": {
     "@prisma/client": "^4.16.2",
     "axios": "^1.4.0",
-    "cloudinary": "^1.37.3",
+    "cloudinary": "^1.38.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mercadopago": "^1.5.16",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4"
   },
