--- a/Back/package.json
+++ b/Back/package.json
@@ -10,7 +10,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "railway": "^2.0.17"
   },
   "name": "back",
   "version": "1.0.0",
@@ -20,7 +21,7 @@
     "prisma": "^4.16.2"
   },
   "scripts": {
-    "start": "nodemon -index.js",
+    "start": "nodemon -L --omit=dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
