--- a/Back/package.json
+++ b/Back/package.json
@@ -20,7 +20,7 @@
     "prisma": "^4.16.2"
   },
   "scripts": {
-    "start": "prisma migrate deploy && node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
