--- a/Back/package.json
+++ b/Back/package.json
@@ -11,7 +11,7 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "stripe": "^12.14.0",
+    "stripe": "^12.14.0"
   },
   "name": "back",
   "version": "1.0.0",
@@ -20,7 +20,7 @@
     "prisma": "^4.16.2"
   },
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -28,4 +28,3 @@
   "license": "ISC",
   "description": ""
 }
-
