--- a/Back/package.json
+++ b/Back/package.json
@@ -9,6 +9,7 @@
     "mercadopago": "^1.5.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "stripe": "^12.14.0"
